# analise-vendas-python

./: .env.example  CHANGELOG.md  CODEOWNERS  Makefile  README.md  README.pt-BR.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  prepare-release.yml  release.yml
app/: streamlit_app.py
app/presentation/: analytics.py  data.py
app/ui/: data.py  i18n.py
docs/: README.md  architecture.md  data_dictionary.md  print_view.md
reports/: executive_summary.csv
scripts/: analise_crescimento.py  bump_version.py  check_changelog.py  check_version_sync.py
src/: __init__.py  artifacts.py  data_contract.py  metrics.py
src/sales_analytics/: __init__.py  app_runner.py  artifacts.py  cli.py  config.py  data_contract.py  exceptions.py  logging_utils.py  metrics.py  pipeline.py  quality.py  reporting.py  settings.py  transformations.py  versioning.py
tests/: test_app_entrypoint.py  test_artifacts.py  test_changelog_validation.py  test_cli.py  test_data_schema.py  test_kpis.py  test_quality_pipeline.py  test_reporting.py  test_settings.py  test_ui_data.py  test_versioning.py
